# my-cmake-demo

./: README.md
Demo1/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  main.c
Demo2/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  main.c
Demo3/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake
Demo3/math/: MathFunction.c
Demo4/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c
Demo4/math/: CMakeLists.txt  Makefile
Demo5/: CMakeLists.txt  README.md  main.c
Demo5/math/: CMakeLists.txt
